--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.1.5",
     "next-themes": "^0.1.1",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-multi-carousel": "^2.8.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.27",
