--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-themes": "^0.1.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-lottie": "^1.2.10",
     "react-multi-carousel": "^2.8.0"
   },
   "devDependencies": {
